--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^18.1.0",
     "@angular/platform-browser-dynamic": "^18.1.0",
     "@angular/router": "^18.1.0",
+    "express": "^4.19.2",
     "mongoose": "^8.5.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
